postgres config done